[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Scoreboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=4]
[ext_resource path="res://space_invaders.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/HUD holder.gd" type="Script" id=6]
[ext_resource path="res://shaders/colour_band.shader" type="Shader" id=7]
[ext_resource path="res://sprites/player/player-base.png" type="Texture" id=8]
[ext_resource path="res://Base_image1.gd" type="Script" id=9]
[ext_resource path="res://Base_image2.gd" type="Script" id=10]
[ext_resource path="res://Base_image3.gd" type="Script" id=11]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/Shield_container.gd" type="Script" id=13]
[ext_resource path="res://scenes/Shield.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/baseline.gd" type="Script" id=15]
[ext_resource path="res://scenes/Sound_player.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/Mothership_container.gd" type="Script" id=17]
[ext_resource path="res://scenes/Bomb_controller.gd" type="Script" id=18]
[ext_resource path="res://scenes/Invader_controller.gd" type="Script" id=19]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Game_over_text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_screen_wipe"
} ]
}

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )
shader_param/world_y = null
shader_param/height = null

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 7 )
shader_param/world_y = null
shader_param/height = null

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 7 )
shader_param/world_y = null
shader_param/height = null

[sub_resource type="DynamicFont" id=8]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 8
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 7 )
shader_param/world_y = null
shader_param/height = null

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over_text = SubResource( 1 )
anims/screen_wipe = SubResource( 2 )

[node name="Scoreboard" parent="." instance=ExtResource( 2 )]
z_index = 99

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 10, 218 )
z_index = 3

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[node name="Mothership_spawn_point_left" type="Node2D" parent="."]
position = Vector2( 0, 35 )

[node name="Mothership_spawn_point_right" type="Node2D" parent="."]
position = Vector2( 224, 35 )

[node name="Game_over_text" type="Label" parent="."]
margin_left = 89.0
margin_top = 49.0
margin_right = 147.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"
percent_visible = 0.0

[node name="HUD holder" type="Node2D" parent="."]
editor/display_folded = true
z_index = 99
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="HUD holder"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Lives_label" type="Label" parent="HUD holder/HUD"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 0.28
margin_left = 10.0
margin_top = 241.0
margin_right = 18.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 4 )
text = "3"
align = 1
clip_text = true

[node name="Base_image1" type="Sprite" parent="HUD holder/HUD"]
material = SubResource( 5 )
position = Vector2( 35, 244.667 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Base_image2" type="Sprite" parent="HUD holder/HUD"]
material = SubResource( 6 )
position = Vector2( 51, 244.667 )
texture = ExtResource( 8 )
script = ExtResource( 10 )

[node name="Base_image3" type="Sprite" parent="HUD holder/HUD"]
material = SubResource( 7 )
position = Vector2( 67, 244.667 )
texture = ExtResource( 8 )
script = ExtResource( 11 )

[node name="Ready_player_text" type="Label" parent="HUD holder/HUD"]
margin_left = 68.8518
margin_top = 115.259
margin_right = 147.852
margin_bottom = 126.259
custom_fonts/font = SubResource( 8 )
text = "GET READY!"
align = 1

[node name="Demo_text" type="Label" parent="HUD holder/HUD"]
margin_left = 74.0
margin_top = 242.0
margin_right = 154.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 9 )
text = "ATTRACT MODE"
align = 1

[node name="Background" parent="." instance=ExtResource( 12 )]

[node name="Shield_container" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 13 )

[node name="ShieldA" parent="Shield_container" instance=ExtResource( 14 )]
position = Vector2( 29, 191 )
z_index = 5

[node name="ShieldB" parent="Shield_container" instance=ExtResource( 14 )]
material = SubResource( 10 )
position = Vector2( 75, 191 )
z_index = 5

[node name="ShieldC" parent="Shield_container" instance=ExtResource( 14 )]
material = SubResource( 10 )
position = Vector2( 127, 191 )
z_index = 5

[node name="ShieldD" parent="Shield_container" instance=ExtResource( 14 )]
material = SubResource( 10 )
position = Vector2( 173, 191 )
z_index = 5

[node name="Baseline" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Sound_player" parent="." instance=ExtResource( 16 )]

[node name="Mothership_container" type="Node" parent="."]
script = ExtResource( 17 )

[node name="Spawn_timer" type="Timer" parent="Mothership_container"]
wait_time = 19.0

[node name="Bomb_controller" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Invader_controller" type="Node" parent="."]
script = ExtResource( 19 )
[connection signal="timeout" from="Mothership_container/Spawn_timer" to="Mothership_container" method="spawn"]
